Added preferences setting for city name.